project(server)
set(CMAKE_CXX_STANDARD 17)
set(CLIENT_NAME client)
find_package(Glog)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${GLOG_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} Epoll_test.cpp)
add_executable(${CLIENT_NAME} stress_test.cpp)
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${CLIENT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} glog)
target_link_libraries(${CLIENT_NAME} glog)